package com.novaperutech.veyra.platform.shared.interfaces.rest.resources;
/**
 * Message resource.
 * @param message The message to show
 */
public record MessageResource(String message) {
}
