@startuml
' Bounded Context: shared

package "domain.model.aggregates" {
  abstract class AuditableAbstractAggregateRoot {
    +id : UUID
    +createdAt : Instant
    +updatedAt : Instant
  }
}

package "domain.model.entities" {
  class AuditableModel {
    +createdBy : String
    +createdAt : Instant
    +updatedAt : Instant
  }
}

package "infrastructure.persistence.jpa.strategy" {
  interface PhysicalNamingStrategy
  class SnakeCasePhysicalNamingStrategy <<strategy>>
}

package "infrastructure.persistence.jpa.configuration.strategy" {
  class SnakeCaseWithPluralizedTablePhysicalNamingStrategy <<strategy>>
}

package "infrastructure.documentation.openapi.configuration" {
  class OpenApiConfiguration <<configuration>>
}

package "interfaces.rest.resources" {
  class MessageResource
}

AuditableModel <|-- AuditableAbstractAggregateRoot

PhysicalNamingStrategy <|.. SnakeCasePhysicalNamingStrategy
PhysicalNamingStrategy <|.. SnakeCaseWithPluralizedTablePhysicalNamingStrategy

OpenApiConfiguration --> MessageResource : uses

@enduml
